--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body{
 #resultDiv{
     position: absolute;
     right: 5px;
-    top: 0;
+    top: 0px;
 
     background-color: rgb(0, 0, 0, 0.75);
     color: white;
@@ -200,14 +200,17 @@ body{
 }
 #P_showbox{
     color: white;
-}#S_showbox{
-    color: red;
 }#I_showbox{
+    color: red;
+}#S_showbox{
     color: green;
 }
 
 #timeshow{
-    width: 200px;
+    display: flex;
+    position: relative;
+
+    width: 240px;
     height: 25px;
     background-color: #323235;
     color: white;
@@ -219,8 +222,117 @@ body{
     width: 25px;
     height: 25px;
     background-color: #1e201f;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
     text-align: center;
 
-    box-shadow: 3px 0 3px -2px #1e201f;
+    z-index: 100;
+}
+#timeSpeed{
+    width: 25px;
+    height: 25px;
+    background-color: #1e201f;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size: 12px;
+    text-align: center;
+
+    word-spacing: -10px;
+    line-height: 22px;
+
+    cursor: pointer;
+    user-select: none;
+}
+
+.virus_infection{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 22px;
+    height: 22px;
+
+    background-color: #3f3f46;
+    border-radius: 5px;
+
+    user-select: none;
+}.virus_infection:active{
+    background-color: #323235;
+}
+
+#timebox{
+    position: relative;
+    display: flex;
+
+    width: 100%;
+    height: 25px;
+    align-items: center;
+}
+#timeShadow{
+    position: absolute;
+    z-index: 101;
+
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 5px black inset;
+    background-color: transparent;
+}
+#Square{
+    width: 0px;
+    height: 25px;
+    background-color: #c9fe71;
+}#clock{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100px;
+    height: 25px;
+
+    color: rgb(180, 180, 180);
+    background-color: transparent;
+
+    font-size: 15px;
+    text-align: center;
+    line-height: 25px;
+}
+
+#P_inf{
+    display: none;
+    filter: opacity(0%);
+
+    width: 250px;
+    height: 250px;
+
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 105;
+
+    text-align: right;
+    font-size: 20px;
+    font-weight: bolder;
+    color: white;
+
+    text-shadow: 0px 0px 10px black, 0px 0px 10px black, 0px 0px 10px black, 0px 0px 2px black;
+
+    transition: all 0s;
+}
+.graphDiv{
+    background: white;
+    border: 3px solid black;
+}
+#barDiv{
+    display: none;
+
+    position: absolute;
+    top: 50px;
+    left: 80px;
+    z-index: 150;
+}#lineDiv{
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 80px;
+    z-index: 150;
 }
