--- a/src/index.css
+++ b/src/index.css
@@ -1,412 +1,161 @@
-body{
+body {
     margin: 0;
-}
-#map{
     width: 100vw;
-    height: calc(100vh - 90px);
+    height: 100vh;
+    overflow: hidden;
 }
-#resultDiv{
-    position: absolute;
-    right: 5px;
-    top: 0px;
-
-    background-color: rgb(0, 0, 0, 0.75);
-    color: white;
-    width: calc(100vw - 10px);
-    height: 30px;
-    font-size: 15px;
-    text-align: right;
-
-    box-sizing: border-box;
-    padding: 5px;
-    z-index: 101;
-}
-#underbar{
+#backgroundimg{
     width: 100vw;
-    height: 125px;
-    position: absolute;
-    bottom: 0;
-    z-index: 100;
+    height: 100vh;
+    filter: blur(3px) opacity(90%);
+    background-image: url('./img/virus_microscope-wallpaper-1920x1080.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    transform: scale(1.02);
 }
-#setUnderBar{
-    width: 100vw;
-    height: 90px;
-    background: linear-gradient( to right, #1e201f 10%, gray 50%, #1e201f);
-    position: inherit;
-
-    align-items: center;
-    justify-content: center;
-
-    z-index: 105;
-    bottom: 0;
-}
-#setUnderBar > div{
-    display: flex;
-}
-#peo1{
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: green;
-    border-radius: 50%;
-}
-.mylocate{
-    display: flex;
-    height: 50px;
-    line-height: 50px;
-    /* color: white; */
-
-    position: absolute;
-    z-index: 102;
-    left: 50%;
-    /* transition: all 0.1s; */
-    transform: translate(-50%, -20%);
-    /* filter: drop-shadow(0 0 3px black); */
-    
-    user-select: none;
-    top: calc(50% - 100px);
-}
-.Warning_alert{
-    display: none;
-    font-size: 25px;
-    font-weight: bolder;
-
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-
-    filter: opacity(0%);
-
-    transition: all 0s;
-}
-
-/* 플레이어 위치 화살표 애니메이션 */
-/* @keyframes move_arrow{ 
-    from {transform: translate(-50%, 0%);}
-    to {transform: translate(-50%, -20%);}
-} */
-
-
-/* 사이트 메인 메뉴 애니메이션 */
-.mainMenu{
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    width: 50px; 
-    height: 50px;
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    border-radius: 50%;
-    background: #323235;
-    
-    box-sizing: border-box;
-    z-index: 150;
-}
-.mainMenu:before, .mainMenu:after{
-    display: block;
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 30px;
-    height: 4px;
-    border-radius: 2px;
-    background: white;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    -webkit-transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-}
-.mainMenu:before{
-    margin-top: -8px;
-}
-.mainMenu:after{
-    margin-top: 4px;
-}
-.mainMenu.active:before{
-    margin-top: -2px;
-    -webkit-transform: translateX(-50%) rotate(45deg) translateZ(0);
-    transform: translateX(-50%) rotate(45deg) translateZ(0);
-}
-.mainMenu.active:after{
-    margin-top: -2px;
-    -webkit-transform: translateX(-50%) rotate(-45deg) translateZ(0);
-    transform: translateX(-50%) rotate(-45deg) translateZ(0);
-}
-
-/* 사이드 메뉴 내용 */
-#mainMenu_contents{
-    display: flex;
-    flex-direction: column;
-
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    width: 50px; 
-    height: 50px;
-    border-radius: 25px;
-    background: #323235;
-    padding-top: 50px;
-    align-items: center;
-
-    box-sizing: border-box;
-    overflow-y: hidden;
-    z-index: 149;
-
-    transition: all 0.2s;
-}
-#mainMenu_contents div{
-    display: flex;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    margin: 5px 0;
-    font-size: 20px;
-    justify-content: center;
-    align-items: center;
-    background-color: #424249;
-    box-shadow: 0px 0px 1px 1.5px #56565f;
-
-    cursor: pointer;
-    user-select: none;
-}#mainMenu_contents div:hover{
-    background-color: #3f3f46;
-}#mainMenu_contents div:active{
-    background-color: #3f3f46;
-    box-shadow: none;
-}
-
-.Peopleshow{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 110px;
-    height: 22px;
-
-    background-color: #323235;
-    border-radius: 5px;
-
-    margin: 0 5px;
-}.Peopleshow div{
-    width: calc(100% - 30px);
-    height: 20px;
-
-    font-size: 15px;
-    box-sizing: border-box;
-}
-#S_showbox{
-    color: white;
-}#I_showbox{
-    color: red;
-}#R_showbox{
-    color: green;
-}#D_showbox{
-    color: white;
-}
-
-#timeshow{
-    display: flex;
-    position: relative;
-
-    width: 240px;
-    height: 25px;
-    background-color: #323235;
-    color: white;
-    border-radius: 5px;
-    border: 1px solid #4b4b52;
-}
-#timeset{
-    width: 25px;
-    height: 100%;
-    background-color: #1e201f;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    text-align: center;
-
-    z-index: 100;
-}
-#timeSpeed{
-    width: 25px;
-    height: 100%;
-    background-color: #1e201f;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    font-size: 12px;
-    text-align: center;
-
-    word-spacing: -10px;
-    line-height: 21px;
-
-    cursor: pointer;
-    user-select: none;
-}
-
-#virus_infection{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 25px;
-    height: 25px;
-
-    border-radius: 5px;
-
-    cursor: pointer;
-    user-select: none;
-}#virus_infection:active{
-    background-color: #323235;
-}
-
-#timebox{
-    position: relative;
-    display: flex;
-
+hr{
+    margin: 0;
     width: 100%;
-    height: 100%;
-    align-items: center;
+    border: 0;
+    height : 1px;
+    background-color : #bbb;
+    background : -webkit-linear-gradient(left, #eee, #777, #eee);
+    background : -moz-linear-gradient(left, #eee, #777, #eee);
+    background : -ms-linear-gradient(left, #eee, #777, #eee);
+    background : -o-linear-gradient(left, #eee, #777, #eee);
 }
-#timeShadow{
-    position: absolute;
-    z-index: 101;
 
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 5px black inset;
-    background-color: transparent;
-}
-#world_name{
-    position: relative;
-
-    width: 240px;
-    height: 25px;
-    margin: 0 50px;
-    text-align: center;
-    padding: 2px 0;
-    font-size: 15px;
-    background-color: #1e201f;
-    color: white;
-    border-radius: 5px;
-
-    box-sizing: border-box;
-}
-#Square{
-    width: 0px;
-    height: 25px;
-    background-color: #c9fe71;
-}#clock{
+#box {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 100px;
-    height: 25px;
+    width: 550px;
+    height: 350px;
+    padding: 10px;
 
-    color: rgb(180, 180, 180);
-    background-color: transparent;
+    border: 4px outset;
+    border-radius: 10px;
 
-    font-size: 15px;
-    text-align: center;
-    line-height: 25px;
-}
-
-#P_inf{
-    display: none;
-    filter: opacity(0%);
-
-    width: 250px;
-    height: 250px;
-
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 1000;
-
-    text-align: right;
-    font-size: 20px;
-    font-weight: bolder;
-    color: white;
-
-    text-shadow: 0px 0px 10px black, 0px 0px 10px black, 0px 0px 10px black, 0px 0px 2px black;
-
-    transition: all 0s;
-}
-.graphDiv{
-    background: white;
-    border: 3px solid black;
-}
-#barDiv{
-    display: none;
-
-    position: absolute;
-    top: 50px;
-    left: 80px;
-    z-index: 150;
-}#lineDiv{
-    display: none;
-    position: absolute;
-    top: 50px;
-    left: 80px;
-    z-index: 150;
-}
-
-.area{
-    position: absolute;
-    background: #fff;
-    border: 1px solid #888;
-    border-radius: 3px;
-    font-size: 12px;
-    top: -5px;
-    left: 15px;
-    padding:2px;
-    font-size: 15px;
-    font-weight: bolder;
-}
-
-.part{
-    width: 100%;
-    align-items: center;
     box-sizing: border-box;
+    background-color: white;
 }
-#part1{
-    height: 60%;
-    justify-content: center;
-}
-#part2{
-    position: inherit;
-    height: 40%;
 
-    bottom: 0;
-    padding: 0px 50px;
-    align-items: flex-start;
-}
-.policy{
+#setBox {
     display: flex;
+    margin-top: 50px;
     align-items: center;
-    justify-content: center;
-    width: 55px;
-    height: 35px;
-    background-color: #4b4b52;
+    flex-direction: column;
+}
 
-    margin: 0 10px;
-    border-radius: 5px;
+.setSubBox {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    margin-bottom: 5px;
+}
+
+#worldSetting {
+    position: absolute;
+    left: 50%;
+    top: 290px;
+    width: 350px;
+    /* height: 50px; */
+    line-height: 50px;
+    transform: translate(-50%, -50%);
+
+    text-align: center;
+    font-size: 30px;
+    font-weight: bolder;
+
+    border-radius: 10px;
+    /* border: 5px outset; */
+
+    background-color: white;
+
+    z-index: 101;
+}
+
+.setinput {
+    position: relative;
+    height: 40px;
+    padding-left: 10px;
+
+    font-size: 22px;
+    box-sizing: border-box;
+
+    border-style: solid;
+    border-radius: 3px;
+}
+
+
+#set_numOfPeo {
+    position: absolute;
+    top: 65px;
+    
+    padding: 5px;
+    box-sizing: border-box;
+    width: 308px;
+    
+    border: 2px solid;
+    border-radius: 3px;
+    border-color: rgb(118, 118, 118);
     font-size: 22px;
 
-    user-select: none;
+    z-index: 100;
 }
-.pol_input input[type="checkbox"] {
+
+#setComplete {
     position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip:rect(0,0,0,0);
-    border: 0;
-}
-.pol_input input[type="checkbox"] + label {
-    display: inline-block;
-    position: relative;
+    bottom: 260px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: bolder;
+    
     cursor: pointer;
+}
+
+.moveright{
+    margin: 5px;
+    width: 70%;
+}
+
+.settingContents{
+    display: flex;
+    width: 440px;
+    height: 50px;
+    margin: 5px;
+    font-size: 25px;
+    font-weight: bolder;
+    align-items: center;
+}
+
+.contentsName{
+    width: 90px;
+    text-align: center;
+}
+
+#set_hospitalSystem {
+    width: 230px;
+    height: 35px;
+    margin: auto;
+    margin-top: 15px;
+
+    font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
+    line-height: 35px;
+
+    border: 1px solid black;
+    border-radius: 3px;
+
+    background-color: rgb(180, 180, 180);
+
     user-select: none;
+    cursor: pointer;
 }
