--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ hr{
 #worldSetting {
     position: absolute;
     left: 50%;
-    top: 290px;
+    top: 50px;
     width: 350px;
     /* height: 50px; */
     line-height: 50px;
@@ -109,7 +109,7 @@ hr{
 
 #setComplete {
     position: absolute;
-    bottom: 260px;
+    bottom: 15px;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 200px;
@@ -158,4 +158,13 @@ hr{
 
     user-select: none;
     cursor: pointer;
+}
+
+#mainMenu{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 550px;
+    height: 450px;
 }
